tests/snapshots/test_basic__translate_customwidget_example-3.snap
---
source: tests/test_basic.rs
expression: "common::translate_file(base.join(\"common/MyDialogButtonBox.qml\")).unwrap()"
---
<ui version="4.0">
 <class>MyDialogButtonBox</class>
 <widget class="QDialogButtonBox" name="buttonBox">
  <property name="orientation">
   <enum>Qt::Horizontal</enum>
  </property>
  <property name="standardButtons">
   <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
  </property>
 </widget>
</ui>

