tests/snapshots/test_basic__translate_customwidget_example.snap
---
source: tests/test_basic.rs
expression: "common::translate_file(base.join(\"MainDialog.qml\")).unwrap()"
---
<ui version="4.0">
 <class>MainDialog</class>
 <widget class="QDialog">
  <layout class="QVBoxLayout">
   <item>
    <widget class="SettingsForm" name="settingsForm">
    </widget>
   </item>
   <item>
    <widget class="MyDialogButtonBox" name="buttonBox">
    </widget>
   </item>
   <item>
    <widget class="MyDialogButtonBox" name="buttonBox2">
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SettingsForm</class>
   <extends>QWidget</extends>
   <header>SettingsForm.h</header>
  </customwidget>
  <customwidget>
   <class>MyDialogButtonBox</class>
   <extends>QDialogButtonBox</extends>
   <header>MyDialogButtonBox.h</header>
  </customwidget>
 </customwidgets>
</ui>

