tests/snapshots/test_basic__translate_example-2.snap
---
source: tests/test_basic.rs
expression: "common::translate_file(\"examples/MainWindow.qml\").unwrap()"
---
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow">
  <property name="geometry">
   <rect>
    <height>600</height>
    <width>800</width>
    <x>0</x>
    <y>0</y>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <height>20</height>
     <width>800</width>
     <x>0</x>
     <y>0</y>
    </rect>
   </property>
   <addaction name="menu_File"/>
   <addaction name="menu_Edit"/>
   <widget class="QMenu" name="menu_File">
    <property name="title">
     <string>&amp;File</string>
    </property>
    <addaction name="action_Open"/>
    <addaction name="separator"/>
    <addaction name="action_Quit"/>
   </widget>
   <widget class="QMenu" name="menu_Edit">
    <property name="title">
     <string>&amp;Edit</string>
    </property>
    <addaction name="action_Undo"/>
    <addaction name="action_Redo"/>
   </widget>
  </widget>
  <widget class="QToolBar">
   <addaction name="action_Open"/>
   <addaction name="separator"/>
   <addaction name="action_Undo"/>
   <addaction name="action_Redo"/>
  </widget>
  <widget class="QStatusBar" name="statusbar">
  </widget>
  <action name="action_Open">
   <property name="text">
    <string>&amp;Open</string>
   </property>
  </action>
  <action name="action_Quit">
   <property name="text">
    <string>&amp;Quit</string>
   </property>
  </action>
  <action name="action_Undo">
   <property name="text">
    <string>&amp;Undo</string>
   </property>
  </action>
  <action name="action_Redo">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>&amp;Redo</string>
   </property>
  </action>
  <action name="actionFoo">
   <property name="text">
    <string>Foo</string>
   </property>
  </action>
 </widget>
</ui>

