tests/snapshots/test_basic__translate_example-4.snap
---
source: tests/test_basic.rs
expression: "translate_file(\"examples/LayoutFlow.qml\")"
---
<ui version="4.0">
 <class>LayoutFlow</class>
 <widget class="QWidget">
  <layout class="QFormLayout">
   <item column="0" row="0">
    <widget class="QLabel">
     <property name="text">
      <string>LeftToRight</string>
     </property>
    </widget>
   </item>
   <item column="1" row="0">
    <layout class="QGridLayout">
     <item column="0" row="0">
      <widget class="QLabel">
       <property name="text">
        <string>row: 0, column: 0</string>
       </property>
      </widget>
     </item>
     <item column="1" row="0">
      <widget class="QLabel">
       <property name="text">
        <string>row: 0, column: 1</string>
       </property>
      </widget>
     </item>
     <item column="2" row="0">
      <widget class="QLabel">
       <property name="text">
        <string>row: 0, column: 2</string>
       </property>
      </widget>
     </item>
     <item column="0" row="1">
      <widget class="QLabel">
       <property name="text">
        <string>row: 1, column: 0</string>
       </property>
      </widget>
     </item>
     <item column="1" row="1">
      <widget class="QLabel">
       <property name="text">
        <string>row: 1, column: 1</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
</ui>

